--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,8 @@
-<div class="card-columns">
-  <div *ngFor="let cancion of nuevasCanciones" class="card">
-    <img [src]="cancion.images[0].url" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{ cancion.name }}</h5>
-      <p class="card-text">
-        <span class="badge badge-primary" *ngFor="let artista of cancion.artists">
-          {{ artista.name }}
-        </span>
-      </p>
-    </div>
-  </div>
+<app-loading *ngIf="loading"></app-loading>
+
+<div *ngIf="error" class="alert alert-danger animated fadeIn">
+  <h3>Error</h3>
+  <p>{{mensajeError}}</p>
 </div>
+
+<app-tarjetas [items]="nuevasCanciones"></app-tarjetas>
