--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -3,12 +3,5 @@
     <input #termino type="text" (keyup)="buscar(termino.value)" class="form-control" placeholder="Buscar Artista">
   </div>
 </div>
-
-<div class="card-columns m-5">
-  <div *ngFor="let artista of artistas" class="card">
-    <img [src]="artista.images[0].url" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{ artista.name }}</h5>
-    </div>
-  </div>
-</div>
+<app-loading *ngIf="loading" class="mt-5"></app-loading>
+<app-tarjetas *ngIf="!loading" [items]="artistas" class="m-5"></app-tarjetas>
